api testin changes in goals